feat: Layout for every page, adding script 3rd lib

--- a/app/global.css
+++ b/app/global.css
@@ -5,7 +5,9 @@ body {
 
 .list-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 5rem;
 }
 
 li {
