feat: added global styles

--- a/app/global.css
+++ b/app/global.css
@@ -1,15 +1,13 @@
-body {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.list-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 5rem;
-}
+.my-body-class {
+  font-family: Lato, Helvetica Neue, Arial, Helvetica, sans-serif;
 
-li {
-  margin-bottom: 10px;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
