--- a/app/global.css
+++ b/app/global.css
@@ -5,7 +5,7 @@
 }
 
 .my-body-class {
-  font-family: Lato, Helvetica Neue, Arial, Helvetica, sans-serif;
+  font-family: var(--font-lato);
 
   min-height: 100vh;
   display: grid;
