--- a/components/KawaiiHeader/KawaiiHeader.css
+++ b/components/KawaiiHeader/KawaiiHeader.css
@@ -1,11 +1,13 @@
 .headerContainer {
-  margin: 2rem 0;
+  width: 100%;
+  margin: 2rem auto;
   position: relative;
 }
 
 .aliveHeader {
   display: flex;
   align-items: center;
+  justify-content: center;
 
   letter-spacing: 2px;
 }
