--- a/app/yes-or-no/page.css
+++ b/app/yes-or-no/page.css
@@ -58,3 +58,12 @@
   text-decoration: none;
   color: #303030;
 }
+
+@media screen and (width < 768px) {
+  .triggerBtn {
+    width: 50%;
+  }
+  .btn {
+    width: 50%;
+  }
+}
