--- a/components/KawaiiHeader/KawaiiHeader.css
+++ b/components/KawaiiHeader/KawaiiHeader.css
@@ -135,3 +135,9 @@
     transform: translate(1px, -2px) rotate(-1deg);
   }
 }
+
+@media screen and (width < 768px) {
+  .modalInfo {
+    grid-template-columns: auto;
+  }
+}
